[package]
name = "hello-db"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenvy = "0.15"
diesel = { version = "2.0.3", features = ["postgres", "postgres_backend", "chrono", "r2d2"] }
diesel_migrations = "2.0.0"
# diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
lazy_static = "1.4"
r2d2 = "0.8.10"
chrono = { version = "0.4.24", features = ["serde"] }

[dev-dependencies]
assert2 = "0.3.10"
ctor = "0.2.0"